--- a/css/site.css
+++ b/css/site.css
@@ -1,6 +1,6 @@
 :root{
-    --primary-color: #01008c;
-    --secondary-color: #fdc30b;
+    --primary-color: #4b4e6d;
+    --secondary-color: #95a3b3;
     --dark-color: #000000;
     --white-color: #e7e7e7;
 }
